fixing alignment and font

--- a/_designer/css/colour_my_world.css
+++ b/_designer/css/colour_my_world.css
@@ -80,7 +80,7 @@ strong{display:block;clear:both;}
     width:275px;
 }
 #colour-my-world #designer_options_font li {
-    font-size:20px;
+    font-size:24px;
     cursor: pointer;
 }
 
